--- a/styles.css
+++ b/styles.css
@@ -74,14 +74,14 @@ body {
 }
 
 .max-width {
-  max-width: 1300px;
+  max-width: 1600px;
   margin-inline: auto;
 }
 
 /* HEADERS CSS */
 
 .header {
-  padding: 15px 0;
+  padding: 10px 0;
   position: fixed;
   z-index: 1;
   width: 100%;
@@ -114,11 +114,12 @@ body {
 .nav a {
   text-decoration: none;
   color: rgb(255, 255, 255);
-  padding: 5px 10px;
+  padding:10px 15px;
   font-weight: 200;
   font-size: 18px;
   border-radius: 50%;
   transition: all 0.3s ease;
+  font-size: 20px;
 }
 .nav__links a:hover {
   color: var(--red-orange-500);
@@ -139,11 +140,7 @@ body {
 
 /* HERO SECTION */
 
-.lol {
-  height: 100vh;
-  width: 100%;
-  background-color: black;
-}
+
 .hero {
   height: 100vh;
   position: relative;
@@ -154,10 +151,10 @@ body {
   position: absolute;
   top: 45%;
   left: 30%;
-  max-width: 800px;
+  max-width: 850px;
   transform: translate(-50%, -50%);
   color: white;
-  font-size: 4rem;
+  font-size: 7rem;
   text-align: center;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
 }
@@ -167,7 +164,7 @@ body {
   left: 30%;
   transform: translate(-50%, -50%);
   color: white;
-  font-size: 2rem;
+  font-size: 2.5rem;
   text-align: center;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
 }
@@ -222,7 +219,7 @@ body {
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  gap: 15px;
+  gap: 25px;
   padding-block: 30px;
   background-image: linear-gradient(#085e058a, #24ec1a2d), url('./img/optimizada/arbol.webp');
   background-repeat: no-repeat;
@@ -230,7 +227,7 @@ body {
   background-attachment: fixed;
 }
 .countdown__title {
-  font-size: 2.5rem;
+  font-size: 3.5rem;
   color: #fff;
 }
 
@@ -244,7 +241,7 @@ body {
   flex-direction: column;
   align-items: center;
   background-color: var(--harlequin-400);
-  padding: 5px 15px;
+  padding: 10px 20px;
   border-radius: 10px;
 }
 
@@ -259,7 +256,7 @@ body {
 }
 
 :is(#days, #hours, #minutes, #seconds) {
-  font-size: 2.5rem;
+  font-size: 3rem;
   font-weight: bold;
 }
 
@@ -291,12 +288,12 @@ body {
   gap: 30px;
 }
 .description__title {
-  font-size: 2.5rem;
+  font-size: 3rem;
   margin-bottom: 20px;
 }
 .description p {
-  font-size: 1.2rem;
-  max-width: 800px;
+  font-size: 1.3rem;
+  max-width: 850px;
   margin: 0 auto;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
     Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -305,7 +302,7 @@ body {
 }
 
 .description img {
-  width: 300px;
+  max-width: 310px;
   border-radius: 15px;
   margin-bottom: 20px;
 }
@@ -324,7 +321,7 @@ body {
 }
 
 .team__title {
-  font-size: 3rem;
+  font-size: 4.5rem;
   margin-bottom: 40px;
   text-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
 }
@@ -355,8 +352,8 @@ body {
 }
 
 .profile-img {
-  width: 110px;
-  height: 110px;
+  width: 150px;
+  height: 150px;
   border-radius: 50%;
   object-fit: cover;
   margin-bottom: 1rem;
@@ -372,7 +369,7 @@ body {
 }
 
 .profile-role {
-  font-size: 0.95rem;
+  font-size: 1rem;
   color: #6b7280;
   margin-top: 0.3rem;
 }
@@ -383,17 +380,18 @@ body {
   padding: 50px 20px;
   text-align: center;
   /* background-color: var(--red-orange-800); */
-  background-image: linear-gradient(#24ec1a52, #24ec1a2d), url('./img/nighthawstudio-6w2ZbBgKK7Q-unsplash.jpg');
+  background-image: linear-gradient(to bottom,#137c0da2, #24ec1a2d), url('./img/nighthawstudio-6w2ZbBgKK7Q-unsplash.jpg');
   color: white;
 }
 .santa__title {
-  font-size: 2.5rem;
-  margin-bottom: 20px;
+  font-size: 4rem;
+  text-shadow:  0 2px 4px rgba(0, 0, 0, 0.8);
+  margin-bottom: 35px;
 }
 
 /* Card */
 .card {
-  width: min(920px, 95%);
+  width: min(1100px, 95%);
   display: grid;
   grid-template-columns: 380px 1fr;
   gap: 28px;
@@ -434,18 +432,19 @@ body {
 }
 .santa-name {
   font-weight: 700;
-  font-size: 20px;
+  font-size: 35px;
 }
 .santa-desc {
   color: var(--muted);
-  font-size: 13px;
+  font-size: 20px;
 }
 .badge {
   background: linear-gradient(90deg, #0f9b0f, #00b712);
   padding: 6px 10px;
   border-radius: 999px;
   font-weight: 600;
-  font-size: 13px;
+  font-size: 20px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 /* Form */
@@ -464,7 +463,7 @@ form {
 }
 label {
   display: block;
-  font-size: 13px;
+  font-size: 25px;
   color: #fff;
   margin-bottom: 6px;
 }
@@ -536,5 +535,5 @@ textarea {
   text-align: center;
   background-color: var(--red-orange-800);
   color: white;
-  font-size: 14px;
+  font-size: 20px;
 }
