--- a/styles.css
+++ b/styles.css
@@ -328,7 +328,6 @@ body {
   max-width: 310px;
   border-radius: 15px;
   margin-bottom: 20px;
- 
 }
 
 /* TEAM FRONTEND */
@@ -336,11 +335,10 @@ body {
 .team {
   padding: 50px 20px;
   text-align: center;
-  background-image: linear-gradient(to bottom, #7d00009a, #7d000078),
-    url('./img/optimizada/arbol.webp');
+  background-image: linear-gradient(to bottom, #137c0db4, #24ec1a47),
+    url('./img/nighthawstudio-6w2ZbBgKK7Q-unsplash.jpg');
   background-repeat: no-repeat;
   background-size: cover;
-  background-attachment: fixed;
 
   color: white;
 }
@@ -535,6 +533,127 @@ textarea {
   align-items: center;
   gap: 8px;
 }
+
+/* From Uiverse.io by Dev-MdTuhin */
+.checkbox-wrapper-10 .tgl {
+  display: none;
+}
+
+.checkbox-wrapper-10 .tgl,
+.checkbox-wrapper-10 .tgl:after,
+.checkbox-wrapper-10 .tgl:before,
+.checkbox-wrapper-10 .tgl *,
+.checkbox-wrapper-10 .tgl *:after,
+.checkbox-wrapper-10 .tgl *:before,
+.checkbox-wrapper-10 .tgl + .tgl-btn {
+  box-sizing: border-box;
+}
+
+.checkbox-wrapper-10 .tgl::-moz-selection,
+.checkbox-wrapper-10 .tgl:after::-moz-selection,
+.checkbox-wrapper-10 .tgl:before::-moz-selection,
+.checkbox-wrapper-10 .tgl *::-moz-selection,
+.checkbox-wrapper-10 .tgl *:after::-moz-selection,
+.checkbox-wrapper-10 .tgl *:before::-moz-selection,
+.checkbox-wrapper-10 .tgl + .tgl-btn::-moz-selection,
+.checkbox-wrapper-10 .tgl::selection,
+.checkbox-wrapper-10 .tgl:after::selection,
+.checkbox-wrapper-10 .tgl:before::selection,
+.checkbox-wrapper-10 .tgl *::selection,
+.checkbox-wrapper-10 .tgl *:after::selection,
+.checkbox-wrapper-10 .tgl *:before::selection,
+.checkbox-wrapper-10 .tgl + .tgl-btn::selection {
+  background: none;
+}
+
+.checkbox-wrapper-10 .tgl + .tgl-btn {
+  outline: 0;
+  display: block;
+  width: 3em;
+  height: 1.9em;
+  position: relative;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+.checkbox-wrapper-10 .tgl + .tgl-btn:after,
+.checkbox-wrapper-10 .tgl + .tgl-btn:before {
+  position: relative;
+  display: block;
+  content: '';
+  width: 50%;
+  height: 100%;
+}
+
+.checkbox-wrapper-10 .tgl + .tgl-btn:after {
+  left: 0;
+}
+
+.checkbox-wrapper-10 .tgl + .tgl-btn:before {
+  display: none;
+}
+
+.checkbox-wrapper-10 .tgl:checked + .tgl-btn:after {
+  left: 50%;
+}
+
+.checkbox-wrapper-10 .tgl-flip + .tgl-btn {
+  padding: 2px;
+  transition: all 0.2s ease;
+  font-family: sans-serif;
+  perspective: 100px;
+}
+
+.checkbox-wrapper-10 .tgl-flip + .tgl-btn:after,
+.checkbox-wrapper-10 .tgl-flip + .tgl-btn:before {
+  display: inline-block;
+  transition: all 0.4s ease;
+  width: 100%;
+  text-align: center;
+  position: absolute;
+  line-height: 2em;
+  font-weight: bold;
+  color: #fff;
+  position: absolute;
+  top: 0;
+  left: 0;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  border-radius: 4px;
+}
+
+.checkbox-wrapper-10 .tgl-flip + .tgl-btn:after {
+  content: attr(data-tg-on);
+  background: #02c66f;
+  transform: rotateY(-180deg);
+}
+
+.checkbox-wrapper-10 .tgl-flip + .tgl-btn:before {
+  background: #ff3a19;
+  content: attr(data-tg-off);
+}
+
+.checkbox-wrapper-10 .tgl-flip + .tgl-btn:active:before {
+  transform: rotateY(-20deg);
+}
+
+.checkbox-wrapper-10 .tgl-flip:checked + .tgl-btn:before {
+  transform: rotateY(180deg);
+}
+
+.checkbox-wrapper-10 .tgl-flip:checked + .tgl-btn:after {
+  transform: rotateY(0);
+  left: 0;
+  background: #7fc6a6;
+}
+
+.checkbox-wrapper-10 .tgl-flip:checked + .tgl-btn:active:after {
+  transform: rotateY(20deg);
+}
+
 .btn {
   background: linear-gradient(90deg, #0f9b0f, #00b712);
   border: none;
@@ -556,6 +675,75 @@ textarea {
   padding: 10px 14px;
 }
 
+/* Jokes Section */
+
+.jokes {
+  padding: 50px 20px;
+  text-align: center;
+  background-image: linear-gradient(to bottom, #7d00009a, #7d000078),
+    url('./img/optimizada/arbol.webp');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  color: white;
+}
+.jokes__title {
+  font-size: 4rem;
+  margin-bottom: 45px;
+}
+
+.joke-card {
+  background-color: var(--red-orange-600);
+  padding: 20px;
+  border-radius: 15px;
+  margin-bottom: 20px;
+  max-width: 700px;
+  margin-left: auto;
+  margin-right: auto;
+  box-shadow: var(--shadow);
+}
+.joke-question {
+  font-size: 36px;
+  font-weight: bold;
+  margin-bottom: 10px;
+  text-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
+}
+.joke-btn {
+  background-color: var(--red-orange-700);
+  border: none;
+  padding: 15px 25px;
+  border-radius: 8px;
+  color: white;
+  font-size: 18px;
+  cursor: pointer;
+  margin-top: 10px;
+  border: 1px solid #fff;
+}
+#another-joke {
+  background-color: var(--red-orange-700);
+  border: none;
+  padding: 15px 25px;
+  border-radius: 8px;
+  color: white;
+  font-size: 18px;
+  cursor: pointer;
+  margin-top: 35px;
+  margin-right: 15px;
+  border: 1px solid #fff;
+}
+.joke-btn:hover,
+#another-joke:hover {
+  background-color: var(--red-orange-800);
+}
+.joke-answer {
+  font-size: 30px;
+  font-style: italic;
+  display: none;
+  color: var(--red-orange-600);
+  background-color: #fff;
+  border-radius: 20px;
+}
+
 /* Footer */
 .footer {
   padding: 30px;
@@ -563,6 +751,118 @@ textarea {
   background-color: var(--red-orange-800);
   color: white;
   font-size: 20px;
+}
+
+.footer p {
+  margin-top: 20px;
+}
+
+/* From Uiverse.io by MrBishtji */
+#SocailIcons {
+  min-width: 350px;
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+}
+.icons {
+  width: 45px;
+  height: 45px;
+  background: #fff;
+  border-radius: 50%;
+  cursor: pointer;
+  outline: none;
+  border: none;
+  text-align: center;
+}
+.iconName {
+  position: absolute;
+  top: -40px;
+  font-size: 12px;
+  color: #fff;
+  transform: scale(0);
+  border-radius: 3px;
+  text-align: center;
+  padding: 3px;
+  transition: transform 0.3s ease;
+}
+
+.icons.instaIcon:hover .iconName {
+  transform: scale(1);
+  left: 15px;
+  background: linear-gradient(30deg, #0000ff, #f56040);
+}
+
+.icons.linkedin:hover .iconName {
+  transform: scale(1);
+  left: 106px;
+  background: #0274b3;
+}
+.icons.whatsapp:hover .iconName {
+  transform: scale(1);
+  right: 100px;
+  background: #25d366;
+}
+.icons.youtube:hover .iconName {
+  transform: scale(1);
+  right: 15px;
+  background: #ff0000;
+}
+.icon {
+  z-index: 1;
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  border-radius: 50%;
+  position: relative;
+  overflow: hidden;
+  border: none;
+  outline: none;
+  transition: color 0.3s ease;
+  color: #0c0c0c;
+}
+.icon:hover {
+  color: #fff;
+}
+.icon::before {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 0;
+  border-radius: 50%;
+  transform: rotateX(360deg);
+  transition: height 0.3s ease;
+  z-index: -1;
+}
+
+.icon:hover::before {
+  height: 100%;
+  z-index: 1;
+}
+.icon:hover {
+  box-shadow: 5px 5px 10px #181717ce;
+}
+
+.icon.tube::before {
+  z-index: -1;
+  background: red;
+}
+
+.icon.insta::before {
+  z-index: -1;
+  background: linear-gradient(40deg, #0000ff, #f56040);
+}
+
+.icon.link::before {
+  z-index: -1;
+  background: #0274b3;
+}
+
+.icon.whats::before {
+  z-index: -1;
+  background: #25d366;
 }
 
 /* ANIMATIONS */
